# frigi

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_move_tables_to_frigi_schema.py  0003_player_level_progress.py
backend/app/: config.py  dependencies.py  main.py
backend/app/content/: global_level.py
backend/app/db/: redis.py  session.py
backend/app/mcp/: client.py  level_tools.py  prompts.py
backend/app/models/: base.py  level.py  player.py  player_difficulty_history.py  player_level_progress.py  score.py  session.py
backend/app/routers/: levels.py  players.py  scores.py  sessions.py
backend/app/schemas/: level.py  player.py  score.py  session.py
backend/app/services/: cache_service.py  difficulty_engine.py  level_generator.py  player_service.py  progression_model.py  scoring_service.py
backend/scripts/: reconcile_levels.py
backend/tests/: conftest.py  test_difficulty.py  test_levels.py  test_scoring.py  test_sessions.py
magicPatterns/: README.md  index.html  tailwind.config.js
magicPatterns/src/: App.tsx  index.css
mobile/: .env.example  app.json  babel.config.js  eas.json  package.json  tsconfig.json
mobile/app/: _layout.tsx  how-to-play.tsx  inventory.tsx  privacy.tsx  terms.tsx
mobile/app/(auth)/: sign-in.tsx  (+1 more)
scripts/: deploy-backend-cloud-run.sh  sync-cloud-run-secrets.sh
shared/: package.json  tsconfig.json
shared/src/: index.ts
(+70 files in other folders)
